// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileBrowserDialog > directory selection > should create new directory 1`] = `
[
  {
    "directory_path": "/New directory/",
  },
  {
    "directory_path": "/New directory/",
  },
]
`;

exports[`FileBrowserDialog > directory selection > should select child 1`] = `
[
  {
    "directory_path": "/2 folders/",
  },
  {
    "directory_path": "/2 folders/",
  },
]
`;

exports[`FileBrowserDialog > directory selection > should select initial directory on linux 1`] = `
[
  {
    "directory_path": "/",
  },
  {
    "directory_path": "/",
  },
]
`;

exports[`FileBrowserDialog > errors > should handle non-existing directories on initial loading on linux 1`] = `
{
  "data": {
    "directories_only": false,
    "path": "/non/existing/path/",
  },
  "method": "POST",
  "path": "filesystem/list_items",
}
`;

exports[`FileBrowserDialog > errors > should handle non-existing directories on initial loading on linux 2`] = `
{
  "data": {
    "directories_only": false,
    "path": "/",
  },
  "method": "POST",
  "path": "filesystem/list_items",
}
`;

exports[`FileBrowserDialog > errors > should handle non-existing directories on initial loading on windows 1`] = `
{
  "data": {
    "directories_only": false,
    "path": "C:\\non\\existing\\path\\",
  },
  "method": "POST",
  "path": "filesystem/list_items",
}
`;

exports[`FileBrowserDialog > errors > should handle non-existing directories on initial loading on windows 2`] = `
{
  "data": {
    "directories_only": false,
    "path": "",
  },
  "method": "POST",
  "path": "filesystem/list_items",
}
`;

exports[`FileBrowserDialog > file selection > should select existing 1`] = `
[
  {
    "existing_file_path": "/2 folders/empty.txt",
  },
  {
    "existing_file_path": "/2 folders/empty.txt",
  },
]
`;

exports[`FileBrowserDialog > file selection > should select new 1`] = `
[
  {
    "file_path": "/2 folders/new_file.txt",
  },
  {
    "file_path": "/2 folders/new_file.txt",
  },
]
`;
